# testing

./: .editorconfig  .env_example  .gitignore  Cargo.toml  README.md  big_wallet.feature  result_slate.txt  result_slate_error.txt  result_slate_success.txt  test_coverage.md  transactions_test.txt
.hook/: pre-commit
binaries/: epic-miner.toml
binaries/epiccash_E3_wallet_ubuntu/: README.txt
features/: api.feature  args.feature  floonet.feature  migration.feature  mining.feature  outputs_list.feature  scalability.feature  transactions copy.feature  transactions.feature  wallet_operation.feature  wallet_recovery.feature
shell/: .gitignore  0-initialize-server.sh  1-create-wallet-world.sh  2-initialize-miner.sh  3-initialize-miner.sh  clean.sh  epic-miner.toml  epic-server.toml  info_example.sh  kill_epics.sh  kill_listen_wallets.sh  kill_server.sh  listen_wallet.sh  mine_all_wallets.sh  recover.sh  show_epics_run.sh  variables.sh
shell/emoji-test/: 0-initialize-server.sh  2-mine-wallets.sh  clean.sh  do-all.sh  epic-miner.toml  variables.sh
shell/emoji-test/purge-wallet/: .api_secret  .owner_api_secret  epic-wallet.toml
shell/emoji-test/purge-wallet/tor/listener/: torrc
shell/emoji-test/purge-wallet/wallet_data/: wallet.seed
shell/emoji-test/purge-wallet/wallet_data/db/sqlite/: epic.db  epic.db-shm  epic.db-wal
shell/emoji-test/server-data/chain_data/lmdb/: data.mdb  lock.mdb
shell/emoji-test/server-data/chain_data/peer/: lock.mdb
shell/emoji-test/world/latest-version/: .api_secret  .owner_api_secret  epic-wallet.toml
shell/emoji-test/world/latest-version/wallet_data/: wallet.seed
shell/emoji-test/world/version-3-3-2/: .api_secret  .owner_api_secret  epic-wallet.toml
shell/emoji-test/world/version-3-3-2/wallet_data/: wallet.seed
shell/qr-test/: 1-create-wallet-world.sh  3-transaction-qr.sh  do-all.sh  stop.sh  variables.sh
shell/qr-test/purge-wallet/: .api_secret  .owner_api_secret  epic-wallet.toml
shell/qr-test/purge-wallet/tor/listener/: torrc
shell/qr-test/purge-wallet/wallet_data/: wallet.seed
shell/qr-test/server-data/chain_data/lmdb/: data.mdb  lock.mdb
shell/qr-test/server-data/chain_data/peer/: lock.mdb
shell/qr-test/world/latest-version/: .api_secret  .owner_api_secret  epic-wallet.toml
shell/qr-test/world/latest-version/wallet_data/: wallet.seed
shell/qr-test/world/version-3-3-2/: .api_secret  .owner_api_secret  epic-wallet.toml
shell/qr-test/world/version-3-3-2/wallet_data/: wallet.seed
shell/wallet-world-test/: .gitignore  1-create-wallet-world.sh  3-transaction-emoji.sh  3-transaction-file.sh  3-transaction-http.sh  clean.sh  do-all.sh  epic-server.toml  info_world.sh  mine-purge-wallet.sh  readme.md  report-2023-01-17.md  variables.sh  variables.sh.example
src/: commands.rs  lib.rs  main (cópia).rs  main.rs  types.rs  utils.rs
tests/: api.rs  floonet.rs  migration.rs  mining.rs  outputs_list.rs  scalability.rs  transactions.rs  transactions_origin.rs  wallet_operation.rs  wallet_recovery.rs
(+30 files in other folders)
