[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "floonet"
harness = false

[[test]]
name = "mining"
harness = false

[[test]]
name = "transactions"
harness = false

[[test]]
name = "wallet_recovery"
harness = false

[[test]]
name = "outputs_list"
harness = false

[[test]]
name = "api"
harness = false


[dependencies]
toml = "0.4"
tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros", "time"] }
dirs = "1.0.3"
epic_chain = { git = "https://github.com/EpicCash/epic.git", branch = "develop", version = "3.0.9-1"}
epic_core = { git = "https://github.com/EpicCash/epic.git", branch = "develop", version = "3.0.9-1"}
epic_util = { git = "https://github.com/EpicCash/epic.git", branch = "develop", version = "3.0.0"}
epic_config = { git = "https://github.com/EpicCash/epic.git", branch = "develop", version = "3.0.9-1"}
epic_p2p = { git = "https://github.com/EpicCash/epic.git", branch = "develop", version = "3.0.9-1"}

epic_wallet_config = { git = "https://github.com/EpicCash/epic-wallet.git", branch = "Develop", version = "3.0.0"}

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.13"
futures = "0.3"